[package]
name = "journey"
version = "0.0.2"
authors = ["Alejandro Socorro <alejandrosocorro@gmail.com>"]
description = """
journey is a command line tool to keep track of your journey and
to help you get organized.
"""
repository = "https://github.com/alejandrosocorro/journey"
license = "MIT"
edition = "2018"

[[bin]]
bench = false
path = "src/bin/main.rs"
name = "jny"

[dependencies]
structopt = "0.3.11"
rustyline = "6.0.0"
failure = "0.1.6"
chrono = "0.4.10"
termcolor = "1.1.0"
